Search result / Fix shift.

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -984,6 +984,9 @@ ul.gn-resultview {
     .popover:not(.sxt-popover-grid) {
       top: 10em !important;
     }
+    .row {
+      margin-left: 0px;
+    }
   }
 }
 
